Fix color contrasts

--- a/mws-restaurant-stage-1/css/styles.css
+++ b/mws-restaurant-stage-1/css/styles.css
@@ -85,7 +85,7 @@ section {
 
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #DBDBDB;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -140,7 +140,7 @@ nav h1 a {
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
-  color: #0275d8;
+  color: #0258A1;
   text-decoration: none;
 }
 
@@ -227,7 +227,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #282C34;
   font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -245,7 +245,7 @@ nav h1 a {
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: #282C34;
   display: inline-block;
   font-size: 14pt;
   margin: 15px 0 0;
@@ -259,7 +259,7 @@ nav h1 a {
 
 
 #restaurant-name {
-  color: #f18200;
+  color: #282C34;
   font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -314,7 +314,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #282C34;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -351,7 +351,7 @@ nav h1 a {
   background-color: #f58500;
   padding: 0.5em;
   text-transform: uppercase;
-  color: #fff;
+  color: #282C34;
   border-radius: 10px;
   font-weight: bold;
 }
@@ -374,7 +374,7 @@ nav h1 a {
 #review-date {
   padding-left: 1em;
   font-weight: bold;
-  color: #aaa;
+  color: #C2C2C2;
 }
 
 #restaurant-hours td {
